# langchain-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
crates/langchain/: Cargo.toml  README.md
crates/langchain-classic/: Cargo.toml  README.md
crates/langchain-classic/src/: adapters.rs  agents.rs  base_language.rs  base_memory.rs  chains.rs  docstore.rs  document_transformers.rs  env.rs  evaluation.rs  example_generator.rs  formatting.rs  graphs.rs  hub.rs  input.rs  lib.rs  memory.rs  model_laboratory.rs  prompts.rs  python.rs  requests.rs  serpapi.rs  smith.rs  sql_database.rs  storage.rs
crates/langchain-classic/src/memory/: prompt.rs
crates/langchain-classic/tests/: chains.rs  facade.rs  legacy_surface.rs  memory_extended.rs  memory_prompts.rs  model_laboratory.rs  parity_surface.rs  utilities.rs
crates/langchain-core/: Cargo.toml  README.md
crates/langchain-core/src/: agents.rs  caches.rs  callbacks.rs  chat_history.rs  chat_loaders.rs  chat_sessions.rs  cross_encoders.rs  document_loaders.rs  documents.rs  embeddings.rs  env.rs  error.rs  example_selectors.rs  exceptions.rs  globals.rs  indexing.rs  language_models.rs  lib.rs  load.rs  messages.rs  output_parsers.rs  outputs.rs  prompt_values.rs  prompts.rs  rate_limiters.rs  retrievers.rs  runnables.rs  stores.rs  structured_query.rs  sys_info.rs  tools.rs  tracers.rs  vectorstores.rs
crates/langchain-core/src/utils/: _merge.rs  aiter.rs  env.rs  formatting.rs  input.rs  iter.rs  mod.rs  strings.rs  usage.rs  utils.rs  uuid.rs
crates/langchain-core/tests/: callbacks_tracers.rs  chat_pipeline.rs  compat_surface.rs  document_loaders_selectors_indexing.rs  llms.rs  load_surface.rs  loading_and_indexing.rs  messages_parity.rs  namespace_surface.rs  outputs.rs  outputs_and_llms.rs  prompt_values_and_retrievers.rs  rate_limiters.rs  tool_calling.rs  tools_and_parsers.rs  utils_extensions.rs  utils_surface.rs  vectorstores.rs
crates/langchain-model-profiles/: Cargo.toml  README.md
crates/langchain-model-profiles/src/: cli.rs  lib.rs
crates/langchain-model-profiles/tests/: cli.rs
crates/langchain-tests/: Cargo.toml  README.md
crates/langchain-tests/src/: base.rs  base_store.rs  caches.rs  chat_models.rs  embeddings.rs  indexing.rs  integration_tests.rs  lib.rs  llms.rs  retrievers.rs  tools.rs  unit_tests.rs  vectorstores.rs
crates/langchain-tests/tests/: extended_standard_helpers.rs  retrievers.rs  standard_harness.rs  standard_helpers.rs  standard_surface.rs  tools_cache_store.rs
crates/langchain-text-splitters/: Cargo.toml  README.md
crates/langchain-text-splitters/src/: base.rs  character.rs  html.rs  json.rs  jsx.rs  konlpy.rs  latex.rs  lib.rs  markdown.rs  nltk.rs  python.rs  sentence_transformers.rs  spacy.rs  utils.rs
crates/langchain-text-splitters/tests/: language_modules.rs  recursive_character.rs  token_splitter.rs
crates/langchain/src/: agents.rs  chat_models.rs  embeddings.rs  lib.rs  rate_limiters.rs
crates/langchain/src/agents/: factory.rs  structured_output.rs
crates/langchain/src/agents/middleware/: _redaction.rs  _retry.rs  context_editing.rs  file_search.rs  human_in_the_loop.rs  mod.rs  model_call_limit.rs  model_fallback.rs  model_retry.rs  pii.rs  shell_tool.rs  summarization.rs  todo.rs  tool_call_limit.rs  tool_emulator.rs  tool_retry.rs  tool_selection.rs  types.rs
crates/langchain/src/tools/: tool_node.rs
crates/langchain/tests/: agents.rs  agents_namespace.rs  facade.rs  factories.rs  middleware.rs  rate_limiters.rs  readme_parity.rs  reference_inventory_parity.rs  version.rs
docs/superpowers/specs/: 2026-03-12-langchain-rs-provider-parity-design.md  2026-03-12-langchain-rs-v1-boundary-design.md  2026-03-13-langchain-rs-parity-design.md
providers/langchain-anthropic/: Cargo.toml  README.md
providers/langchain-anthropic/src/: chat_models.rs  client.rs  data.rs  experimental.rs  lib.rs  llms.rs  output_parsers.rs
providers/langchain-anthropic/src/middleware/: anthropic_tools.rs  bash.rs  file_search.rs  mod.rs  prompt_caching.rs
providers/langchain-anthropic/tests/: chat_model.rs  llms.rs  middleware_and_experimental.rs  namespace.rs
providers/langchain-chroma/: Cargo.toml  README.md
providers/langchain-chroma/src/: lib.rs
providers/langchain-chroma/tests/: namespace.rs  vectorstore.rs
providers/langchain-deepseek/: Cargo.toml  README.md
providers/langchain-deepseek/src/: data.rs  lib.rs
providers/langchain-deepseek/tests/: chat_model.rs  namespace.rs
providers/langchain-exa/: Cargo.toml  README.md
providers/langchain-exa/src/: lib.rs  retrievers.rs  tools.rs  types.rs
providers/langchain-exa/tests/: namespace.rs  retriever_and_tools.rs
providers/langchain-fireworks/: Cargo.toml  README.md
providers/langchain-fireworks/src/: data.rs  lib.rs
providers/langchain-fireworks/tests/: namespace.rs  (+2 more)
providers/langchain-groq/: Cargo.toml  README.md
providers/langchain-groq/src/: data.rs  lib.rs
providers/langchain-groq/tests/: chat_model.rs  namespace.rs  transport.rs
providers/langchain-huggingface/: Cargo.toml  README.md
providers/langchain-huggingface/src/: data.rs  lib.rs
providers/langchain-huggingface/tests/: boundaries.rs  namespace.rs
providers/langchain-mistralai/: Cargo.toml  README.md
providers/langchain-mistralai/src/: data.rs  lib.rs
providers/langchain-mistralai/tests/: namespace.rs  provider.rs
providers/langchain-nomic/: Cargo.toml  README.md
providers/langchain-ollama/: Cargo.toml  README.md
providers/langchain-ollama/src/: data.rs  lib.rs
providers/langchain-ollama/tests/: namespace.rs  provider.rs
providers/langchain-openai/: Cargo.toml  README.md
providers/langchain-openrouter/: Cargo.toml  README.md
providers/langchain-perplexity/: Cargo.toml  README.md
providers/langchain-perplexity/src/: chat_models.rs  data.rs  lib.rs  output_parsers.rs  retrievers.rs  tools.rs  types.rs
providers/langchain-perplexity/tests/: boundaries.rs  namespace.rs
providers/langchain-qdrant/: Cargo.toml  README.md
providers/langchain-xai/: Cargo.toml  README.md
(+47 files in other folders)
