[package]
name = "langchain-classic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
langchain = { path = "../langchain" }
langchain-core = { path = "../langchain-core" }
langchain-text-splitters = { path = "../langchain-text-splitters" }

[dev-dependencies]
tokio.workspace = true
