[package]
name = "langchain-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
