[package]
name = "langchain-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
secrecy.workspace = true
tokio.workspace = true
uuid = { version = "1.18.1", features = ["v7"] }
