[package]
name = "langchain-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
langchain-core = { path = "../../crates/langchain-core" }
langchain-model-profiles = { path = "../../crates/langchain-model-profiles" }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock.workspace = true
