[package]
name = "langchain-groq"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
langchain-core = { path = "../../crates/langchain-core" }
langchain-model-profiles = { path = "../../crates/langchain-model-profiles" }
langchain-openai = { path = "../langchain-openai" }
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
