[package]
name = "langchain-huggingface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
langchain-core = { path = "../../crates/langchain-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
