[package]
name = "langchain-mistralai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
langchain-core = { path = "../../crates/langchain-core" }
langchain-openai = { path = "../langchain-openai" }
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
