[package]
name = "langchain-perplexity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
langchain-core = { path = "../../crates/langchain-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
